--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
     <!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
     <!--game_files_start-->
 	<script egret="game" src="bin-debug/Main.js"></script>
+	<script egret="game" src="bin-debug/components/Item.js"></script>
 	<script egret="game" src="bin-debug/modules/swiper/Slide.js"></script>
 	<script egret="game" src="bin-debug/modules/swiper/Swiper.js"></script>
+	<script egret="game" src="bin-debug/utils/index.js"></script>
 	<!--game_files_end-->
 </head>
 <body>
@@ -51,7 +53,7 @@
     <div style="margin: auto;width: 100%;height: 100%;" class="egret-player"
          data-entry-class="Main"
          data-orientation="auto"
-         data-scale-mode="showAll"
+         data-scale-mode="noScale"
          data-frame-rate="60"
          data-content-width="600"
          data-content-height="500"
