--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <!--game_files_start-->
 	<script egret="game" src="bin-debug/Main.js"></script>
 	<script egret="game" src="bin-debug/components/Item.js"></script>
+	<script egret="game" src="bin-debug/components/Repel.js"></script>
+	<script egret="game" src="bin-debug/components/Scene.js"></script>
 	<script egret="game" src="bin-debug/modules/swiper/Slide.js"></script>
 	<script egret="game" src="bin-debug/modules/swiper/Swiper.js"></script>
 	<script egret="game" src="bin-debug/utils/index.js"></script>
