--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <div style="margin: auto;width: 100%;height: 100%;" class="egret-player"
          data-entry-class="Main"
          data-orientation="auto"
-         data-scale-mode="noScale"
+         data-scale-mode="showAll"
          data-frame-rate="60"
-         data-content-width="600"
-         data-content-height="500"
+         data-content-width="500"
+         data-content-height="800"
          data-show-paint-rect="false"
          data-multi-fingered="2"
     </div>
