--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
 	<script egret="game" src="bin-debug/components/Item.js"></script>
 	<script egret="game" src="bin-debug/components/Repel.js"></script>
 	<script egret="game" src="bin-debug/components/Scene.js"></script>
+	<script egret="game" src="bin-debug/modules/ajax/index.js"></script>
 	<script egret="game" src="bin-debug/modules/swiper/Slide.js"></script>
 	<script egret="game" src="bin-debug/modules/swiper/Swiper.js"></script>
-	<script egret="game" src="bin-debug/utils/index.js"></script>
+	<script egret="game" src="bin-debug/modules/utils/index.js"></script>
 	<!--game_files_end-->
 </head>
 <body>
