--- a/index.html
+++ b/index.html
@@ -12,15 +12,92 @@
     <style>
         html, body {
             -ms-touch-action: none;
-            background: #888888;
+            background: #000000;
             padding: 0;
             border: 0;
             margin: 0;
             height: 100%;
+            font-family: Arial,Helvetica,'Hiragino Sans GB','Microsoft YaHei',sans-serif;
         }
+
+        #setting {
+            color: #fff;
+            background: #000;
+            margin: 0;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 100;
+        }
+        #setting .content {
+            margin: 0 auto;
+            width: 500px;
+        }
+        #setting h1 {
+            margin: 1em 0;
+            text-align: center;
+            border-bottom: 1px solid #555;
+        }
+        #setting .form {
+            font-size: 16px;
+        }
+        #setting .row {
+            line-height: 28px;
+            margin: 5px;
+        }
+        #setting label {
+            display: inline-block;
+            width: 7em;
+            text-align: right;
+        }
+        #setting .row.btn-row {
+            padding-left: 7em;
+        }
+        #setting .input, #setting .textarea {
+            font-size: 14px;
+            border-radius: 3px;
+            background: #ddd;
+            border: none;
+            padding: 0 10px;
+        }
+        #setting .input:focus, #setting .textarea:focus {
+            background: #fff;
+        }
+        #setting .input {
+            width: 100px;
+            height: 24px;
+        }
+        #setting .textarea {
+            width: 300px;
+            vertical-align: top;
+            padding: 10px;
+        }
+        #setting .help {
+            margin: 5px 0;
+            padding-left: 10em;
+            font-size: 12px;
+            color: #999;
+        }
+        #setting .form-btn {
+            height: 30px;
+            font-size: 16px;
+            width: 120px;
+            text-align: center;
+            border: none;
+            border-radius: 3px;
+            background: #fff;
+            color: #000;
+        }
+        #setting .form-btn:hover {
+            background: #ddd;
+        }
+
         canvas {
             background: #000;
         }
+
     </style>
 
     <!--这个标签为通过egret提供的第三方库的方式生成的 javascript 文件。删除 modules_files 标签后，库文件加载列表将不会变化，请谨慎操作！-->
@@ -29,7 +106,7 @@
 	<script egret="lib" src="libs/modules/egret/egret.web.js" src-release="libs/modules/egret/egret.web.min.js"></script>
 	<script egret="lib" src="libs/modules/game/game.js" src-release="libs/modules/game/game.min.js"></script>
 	<script egret="lib" src="libs/modules/game/game.web.js" src-release="libs/modules/game/game.web.min.js"></script>
-	<script egret="lib" src="libs/modules/res/res.js" src-release="libs/modules/res/res.min.js"></script>
+	<script egret="lib" src="libs/modules/eui/eui.js" src-release="libs/modules/eui/eui.min.js"></script>
 	<script egret="lib" src="libs/modules/tween/tween.js" src-release="libs/modules/tween/tween.min.js"></script>
 	<script egret="lib" src="libs/modules/mouse/mouse.js" src-release="libs/modules/mouse/mouse.min.js"></script>
 	<script egret="lib" src="libs/modules/lodash/lodash.js" src-release="libs/modules/lodash/lodash.min.js"></script>
@@ -53,15 +130,74 @@
 </head>
 <body>
 
-    <div style="margin: auto;width: 100%;height: 100%;" class="egret-player"
+    <div id="setting">
+        <div class="content">
+            <h1>设置</h1>
+            <form class="form">
+                <div class="row">
+                    <label>分辨率：</label>
+                    <input type="text" class="input" name="sceneWidth">
+                    <span>x</span>
+                    <input type="text" class="input" name="sceneHeight">
+                    <p class="help">设置舞台的长和宽(单位：像素)</p>
+                </div>
+                <div class="row">
+                    <label for="">显示行数：</label>
+                    <input type="text" class="input" name="rowCount">
+                    <p class="help">设置一屏要显示几行</p>
+                </div>
+                <div class="row">
+                    <label for="">图片间距：</label>
+                    <input type="text" class="input" name="padding">
+                    <p class="help">设置图片之间的间隔大小(单位：像素)</p>
+                </div>
+                <div class="row">
+                    <label for="">滚动速度：</label>
+                    <input type="text" class="input" name="speed">
+                    <p class="help">设置图片滚动速度，数值越大滚动越快</p>
+                </div>
+                <div class="row">
+                    <label for="">场景切换时间：</label>
+                    <input type="text" class="input" name="sceneChangeTime">
+                    <span>秒</span>
+                    <p class="help">设置场景切换的时间间隔(单位：秒)，0表示不切换</p>
+                </div>
+                <div class="row">
+                    <label>背景色：</label>
+                    <input type="text" class="input" name="bgColor">
+                    <p class="help">设置舞台背景色</p>
+                </div>
+                <div class="row">
+                    <label>背景图：</label>
+                    <input type="text" class="input" name="bgImage" style="width: 240px">
+                    <p class="help">设置舞台背图片</p>
+                </div>
+                <div class="row">
+                    <label>自动恢复时间：</label>
+                    <input type="text" class="input" name="autoResetTime" style="width: 240px">
+                    <p class="help">设置无操作时自动恢复到无人浏览状态的时间间隔(单位：秒), 0表示不自动恢复</p>
+                </div>
+                <div class="row">
+                    <label for="">API列表：</label>
+                    <textarea class="textarea" name="itemsList" rows="5"></textarea>
+                    <p class="help">请输入商品数据API地址，如有多个场景，则每个地址一行</p>
+                </div>
+                <div class="row btn-row">
+                    <button class="form-btn"> 开 始 </button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div style="margin: auto;width: 100%;height: 100%;" class="egret-player" id="egret-player"
          data-entry-class="Main"
          data-orientation="auto"
-         data-scale-mode="showAll"
+         data-scale-mode="noScale"
          data-frame-rate="60"
          data-content-width="500"
          data-content-height="800"
          data-show-paint-rect="false"
-         data-multi-fingered="2"
+         data-multi-fingered="2">
     </div>
     <script>
         /**
