--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             font-family: Arial,Helvetica,'Hiragino Sans GB','Microsoft YaHei',sans-serif;
         }
 
-        #setting {
+        #settings {
             color: #fff;
             background: #000;
             margin: 0;
@@ -31,56 +31,56 @@
             right: 0;
             z-index: 100;
         }
-        #setting .content {
+        #settings .content {
             margin: 0 auto;
             width: 500px;
         }
-        #setting h1 {
+        #settings h1 {
             margin: 1em 0;
             text-align: center;
             border-bottom: 1px solid #555;
         }
-        #setting .form {
+        #settings .form {
             font-size: 16px;
         }
-        #setting .row {
+        #settings .row {
             line-height: 28px;
             margin: 5px;
         }
-        #setting label {
+        #settings label {
             display: inline-block;
             width: 7em;
             text-align: right;
         }
-        #setting .row.btn-row {
+        #settings .row.btn-row {
             padding-left: 7em;
         }
-        #setting .input, #setting .textarea {
+        #settings .input, #settings .textarea {
             font-size: 14px;
             border-radius: 3px;
             background: #ddd;
             border: none;
             padding: 0 10px;
         }
-        #setting .input:focus, #setting .textarea:focus {
+        #settings .input:focus, #settings .textarea:focus {
             background: #fff;
         }
-        #setting .input {
+        #settings .input {
             width: 100px;
             height: 24px;
         }
-        #setting .textarea {
+        #settings .textarea {
             width: 300px;
             vertical-align: top;
             padding: 10px;
         }
-        #setting .help {
+        #settings .help {
             margin: 5px 0;
             padding-left: 10em;
             font-size: 12px;
             color: #999;
         }
-        #setting .form-btn {
+        #settings .form-btn {
             height: 30px;
             font-size: 16px;
             width: 120px;
@@ -90,7 +90,7 @@
             background: #fff;
             color: #000;
         }
-        #setting .form-btn:hover {
+        #settings .form-btn:hover {
             background: #ddd;
         }
 
@@ -123,6 +123,7 @@
 	<script egret="game" src="bin-debug/components/Repel.js"></script>
 	<script egret="game" src="bin-debug/components/Scene.js"></script>
 	<script egret="game" src="bin-debug/modules/ajax/index.js"></script>
+	<script egret="game" src="bin-debug/modules/settings/index.js"></script>
 	<script egret="game" src="bin-debug/modules/swiper/Slide.js"></script>
 	<script egret="game" src="bin-debug/modules/swiper/Swiper.js"></script>
 	<script egret="game" src="bin-debug/modules/utils/index.js"></script>
@@ -130,56 +131,56 @@
 </head>
 <body>
 
-    <div id="setting">
+    <div id="settings">
         <div class="content">
             <h1>设置</h1>
             <form class="form">
                 <div class="row">
                     <label>分辨率：</label>
-                    <input type="text" class="input" name="sceneWidth">
+                    <input type="text" class="input" name="sceneWidth" value-type="int">
                     <span>x</span>
-                    <input type="text" class="input" name="sceneHeight">
+                    <input type="text" class="input" name="sceneHeight" value-type="int">
                     <p class="help">设置舞台的长和宽(单位：像素)</p>
                 </div>
                 <div class="row">
                     <label for="">显示行数：</label>
-                    <input type="text" class="input" name="rowCount">
+                    <input type="text" class="input" name="rowCount" value-type="int">
                     <p class="help">设置一屏要显示几行</p>
                 </div>
                 <div class="row">
                     <label for="">图片间距：</label>
-                    <input type="text" class="input" name="padding">
+                    <input type="text" class="input" name="padding" value-type="int">
                     <p class="help">设置图片之间的间隔大小(单位：像素)</p>
                 </div>
                 <div class="row">
                     <label for="">滚动速度：</label>
-                    <input type="text" class="input" name="speed">
+                    <input type="text" class="input" name="speed" value-type="float">
                     <p class="help">设置图片滚动速度，数值越大滚动越快</p>
                 </div>
                 <div class="row">
                     <label for="">场景切换时间：</label>
-                    <input type="text" class="input" name="sceneChangeTime">
+                    <input type="text" class="input" name="sceneChangeTime" value-type="int">
                     <span>秒</span>
                     <p class="help">设置场景切换的时间间隔(单位：秒)，0表示不切换</p>
                 </div>
                 <div class="row">
                     <label>背景色：</label>
-                    <input type="text" class="input" name="bgColor">
+                    <input type="text" class="input" name="bgColor" value-type="string">
                     <p class="help">设置舞台背景色</p>
                 </div>
                 <div class="row">
                     <label>背景图：</label>
-                    <input type="text" class="input" name="bgImage" style="width: 240px">
+                    <input type="text" class="input" name="bgImage" style="width: 240px" value-type="string">
                     <p class="help">设置舞台背图片</p>
                 </div>
                 <div class="row">
                     <label>自动恢复时间：</label>
-                    <input type="text" class="input" name="autoResetTime" style="width: 240px">
+                    <input type="text" class="input" name="autoResetTime" style="width: 240px" value-type="int">
                     <p class="help">设置无操作时自动恢复到无人浏览状态的时间间隔(单位：秒), 0表示不自动恢复</p>
                 </div>
                 <div class="row">
                     <label for="">API列表：</label>
-                    <textarea class="textarea" name="itemsList" rows="5"></textarea>
+                    <textarea class="textarea" name="apiList" rows="5" value-type="string[]"></textarea>
                     <p class="help">请输入商品数据API地址，如有多个场景，则每个地址一行</p>
                 </div>
                 <div class="row btn-row">
@@ -189,7 +190,7 @@
         </div>
     </div>
 
-    <div style="margin: auto;width: 100%;height: 100%;" class="egret-player" id="egret-player"
+    <div style="margin: auto;width: 100%;height: 100%; visibility: hidden;" class="egret-player" id="egret-player"
          data-entry-class="Main"
          data-orientation="auto"
          data-scale-mode="noScale"
