--- a/index.html
+++ b/index.html
@@ -99,33 +99,6 @@
         }
 
     </style>
-
-    <!--这个标签为通过egret提供的第三方库的方式生成的 javascript 文件。删除 modules_files 标签后，库文件加载列表将不会变化，请谨慎操作！-->
-    <!--modules_files_start-->
-	<script egret="lib" src="libs/modules/egret/egret.js" src-release="libs/modules/egret/egret.min.js"></script>
-	<script egret="lib" src="libs/modules/egret/egret.web.js" src-release="libs/modules/egret/egret.web.min.js"></script>
-	<script egret="lib" src="libs/modules/game/game.js" src-release="libs/modules/game/game.min.js"></script>
-	<script egret="lib" src="libs/modules/tween/tween.js" src-release="libs/modules/tween/tween.min.js"></script>
-	<script egret="lib" src="libs/modules/mouse/mouse.js" src-release="libs/modules/mouse/mouse.min.js"></script>
-	<script egret="lib" src="libs/modules/lodash/lodash.js" src-release="libs/modules/lodash/lodash.min.js"></script>
-	<!--modules_files_end-->
-
-    <!--这个标签为不通过egret提供的第三方库的方式使用的 javascript 文件，请将这些文件放在libs下，但不要放在modules下面。-->
-    <!--other_libs_files_start-->
-    <!--other_libs_files_end-->
-
-    <!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
-    <!--game_files_start-->
-	<script egret="game" src="bin-debug/Main.js"></script>
-	<script egret="game" src="bin-debug/modules/ajax/index.js"></script>
-	<script egret="game" src="bin-debug/modules/scene/Item.js"></script>
-	<script egret="game" src="bin-debug/modules/scene/Repel.js"></script>
-	<script egret="game" src="bin-debug/modules/scene/Scene.js"></script>
-	<script egret="game" src="bin-debug/modules/settings/index.js"></script>
-	<script egret="game" src="bin-debug/modules/swiper/Slide.js"></script>
-	<script egret="game" src="bin-debug/modules/swiper/Swiper.js"></script>
-	<script egret="game" src="bin-debug/modules/utils/index.js"></script>
-	<!--game_files_end-->
 </head>
 <body>
 
@@ -198,6 +171,38 @@
          data-show-paint-rect="false"
          data-multi-fingered="2">
     </div>
+
+
+
+    <!--这个标签为通过egret提供的第三方库的方式生成的 javascript 文件。删除 modules_files 标签后，库文件加载列表将不会变化，请谨慎操作！-->
+    <!--modules_files_start-->
+	<script egret="lib" src="libs/modules/egret/egret.js" src-release="libs/modules/egret/egret.min.js"></script>
+	<script egret="lib" src="libs/modules/egret/egret.web.js" src-release="libs/modules/egret/egret.web.min.js"></script>
+	<script egret="lib" src="libs/modules/game/game.js" src-release="libs/modules/game/game.min.js"></script>
+	<script egret="lib" src="libs/modules/game/game.web.js" src-release="libs/modules/game/game.web.min.js"></script>
+	<script egret="lib" src="libs/modules/tween/tween.js" src-release="libs/modules/tween/tween.min.js"></script>
+	<script egret="lib" src="libs/modules/mouse/mouse.js" src-release="libs/modules/mouse/mouse.min.js"></script>
+	<script egret="lib" src="libs/modules/lodash/lodash.js" src-release="libs/modules/lodash/lodash.min.js"></script>
+	<!--modules_files_end-->
+
+    <!--这个标签为不通过egret提供的第三方库的方式使用的 javascript 文件，请将这些文件放在libs下，但不要放在modules下面。-->
+    <!--other_libs_files_start-->
+    <!--other_libs_files_end-->
+
+    <!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
+    <!--game_files_start-->
+	<script egret="game" src="bin-debug/Main.js"></script>
+	<script egret="game" src="bin-debug/modules/ajax/index.js"></script>
+	<script egret="game" src="bin-debug/modules/scene/Item.js"></script>
+	<script egret="game" src="bin-debug/modules/scene/Repel.js"></script>
+	<script egret="game" src="bin-debug/modules/scene/Scene.js"></script>
+	<script egret="game" src="bin-debug/modules/scene/State.js"></script>
+	<script egret="game" src="bin-debug/modules/settings/index.js"></script>
+	<script egret="game" src="bin-debug/modules/swiper/Slide.js"></script>
+	<script egret="game" src="bin-debug/modules/swiper/Swiper.js"></script>
+	<script egret="game" src="bin-debug/modules/utils/index.js"></script>
+	<!--game_files_end-->
+
     <script>
         /**
          * {
