--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
 	<script egret="game" src="bin-debug/modules/settings/index.js"></script>
 	<script egret="game" src="bin-debug/modules/swiper/Slide.js"></script>
 	<script egret="game" src="bin-debug/modules/swiper/Swiper.js"></script>
+	<script egret="game" src="bin-debug/modules/utils/colorName.js"></script>
 	<script egret="game" src="bin-debug/modules/utils/index.js"></script>
 	<!--game_files_end-->
 
