--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="360-fullscreen" content="true"/>
     <style>
         html, body {
+            touch-action: none;
             -ms-touch-action: none;
             background: #000000;
             padding: 0;
@@ -180,6 +181,7 @@
 	<script egret="lib" src="libs/modules/egret/egret.web.js" src-release="libs/modules/egret/egret.web.min.js"></script>
 	<script egret="lib" src="libs/modules/game/game.js" src-release="libs/modules/game/game.min.js"></script>
 	<script egret="lib" src="libs/modules/game/game.web.js" src-release="libs/modules/game/game.web.min.js"></script>
+	<script egret="lib" src="libs/modules/RES/RES.js" src-release="libs/modules/RES/RES.min.js"></script>
 	<script egret="lib" src="libs/modules/tween/tween.js" src-release="libs/modules/tween/tween.min.js"></script>
 	<script egret="lib" src="libs/modules/lodash/lodash.js" src-release="libs/modules/lodash/lodash.min.js"></script>
 	<!--modules_files_end-->
@@ -190,13 +192,13 @@
 
     <!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
     <!--game_files_start-->
-	<script egret="game" src="bin-debug/modules/scene/Scene.js"></script>
 	<script egret="game" src="bin-debug/Main.js"></script>
+	<script egret="game" src="bin-debug/modules/ajax/index.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/Button.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/Item.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/LoadingView.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/Repel.js"></script>
-	<script egret="game" src="bin-debug/modules/ajax/index.js"></script>
+	<script egret="game" src="bin-debug/modules/scene/Scene.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/interface.js"></script>
 	<script egret="game" src="bin-debug/modules/settings/index.js"></script>
 	<script egret="game" src="bin-debug/modules/swiper/Slide.js"></script>
