--- a/index.html
+++ b/index.html
@@ -133,6 +133,20 @@
             right: 0;
             z-index: 200;
         }
+        #detail .mask {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: #000;
+            transition: opacity 0.5s ease;
+            -webkit-transition: opacity 0.5s ease;
+            opacity: 0;
+        }
+        #detail .mask.show {
+            opacity: 0.3;
+        }
         #detail .detail-content {
             position: absolute;
             background: #fff;
@@ -141,6 +155,7 @@
             height: 300px;
             top: 100px;
             left: 100px;
+            z-index: 200;
         }
         #detail.detail-out .detail-content {
             opacity: 0;
@@ -295,14 +310,14 @@
 
     <!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
     <!--game_files_start-->
-	<script egret="game" src="bin-debug/modules/ajax/index.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/Scene.js"></script>
+	<script egret="game" src="bin-debug/Main.js"></script>
 	<script egret="game" src="bin-debug/modules/detail/detail.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/Button.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/Item.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/LoadingView.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/Repel.js"></script>
-	<script egret="game" src="bin-debug/Main.js"></script>
+	<script egret="game" src="bin-debug/modules/ajax/index.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/interface.js"></script>
 	<script egret="game" src="bin-debug/modules/settings/index.js"></script>
 	<script egret="game" src="bin-debug/modules/swiper/Slide.js"></script>
