--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             font-family: Arial,Helvetica,'Hiragino Sans GB','Microsoft YaHei',sans-serif;
         }
 
-        #settings {
+        /*#settings {
             color: #fff;
             background: #000;
             margin: 0;
@@ -121,7 +121,7 @@
         }
         #settings .form-btn:hover {
             background: #ddd;
-        }
+        }*/
 
         #detail {
             background: transparent;
@@ -210,7 +210,7 @@
 </head>
 <body>
 
-    <div id="settings" style="display: block">
+    <!--<div id="settings" style="display: block">
         <div class="content">
             <h1>设置</h1>
             <form class="form">
@@ -267,9 +267,9 @@
                 </div>
             </form>
         </div>
-    </div>
+    </div>-->
 
-    <div style="margin: auto;width: 100%;height: 100%; visibility: hidden;" class="egret-player" id="egret-player"
+    <div style="margin: auto; width: 100%;height: 100%;" class="egret-player" id="egret-player"
          data-entry-class="Main"
          data-orientation="auto"
          data-scale-mode="noScale"
@@ -307,10 +307,10 @@
 
     <!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
     <!--game_files_start-->
-	<script egret="game" src="bin-debug/modules/scene/Button.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/Scene.js"></script>
-	<script egret="game" src="bin-debug/modules/detail/detail.js"></script>
 	<script egret="game" src="bin-debug/Main.js"></script>
+	<script egret="game" src="bin-debug/modules/detail/detail.js"></script>
+	<script egret="game" src="bin-debug/modules/scene/Button.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/Item.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/LoadingView.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/Repel.js"></script>
