use relative path

--- a/detail.html
+++ b/detail.html
@@ -28,20 +28,20 @@
       max-width: 100%;
     }
   </style>
-  <script src="/config/config.js"></script>
+  <script src="config/config.js"></script>
 </head>
 
 <body>
   <div class="content">
-    <img src="/assets/images/detail-img/1.jpg" alt="">
-    <img src="/assets/images/detail-img/2.jpg" alt="">
-    <img src="/assets/images/detail-img/3.jpg" alt="">
-    <img src="/assets/images/detail-img/4.jpg" alt="">
-    <img src="/assets/images/detail-img/5.jpg" alt="">
-    <img src="/assets/images/detail-img/6.jpg" alt="">
-    <img src="/assets/images/detail-img/7.jpg" alt="">
-    <img src="/assets/images/detail-img/8.jpg" alt="">
-    <img src="/assets/images/detail-img/9.jpg" alt="">
+    <img src="assets/images/detail-img/1.jpg" alt="">
+    <img src="assets/images/detail-img/2.jpg" alt="">
+    <img src="assets/images/detail-img/3.jpg" alt="">
+    <img src="assets/images/detail-img/4.jpg" alt="">
+    <img src="assets/images/detail-img/5.jpg" alt="">
+    <img src="assets/images/detail-img/6.jpg" alt="">
+    <img src="assets/images/detail-img/7.jpg" alt="">
+    <img src="assets/images/detail-img/8.jpg" alt="">
+    <img src="assets/images/detail-img/9.jpg" alt="">
   </div>
 
   <script src="libs/add-on/jquery.min.js"></script>
