--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     <div style="margin: auto; width: 100%;height: 100%;" class="egret-player" id="egret-player"
          data-entry-class="Main"
          data-orientation="auto"
-         data-scale-mode="noScale"
+         data-scale-mode="showAll"
          data-frame-rate="60"
          data-content-width="500"
          data-content-height="800"
@@ -307,14 +307,14 @@
 
     <!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
     <!--game_files_start-->
-	<script egret="game" src="bin-debug/modules/ajax/index.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/Scene.js"></script>
+	<script egret="game" src="bin-debug/Main.js"></script>
 	<script egret="game" src="bin-debug/modules/detail/detail.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/Button.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/Item.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/LoadingView.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/Repel.js"></script>
-	<script egret="game" src="bin-debug/Main.js"></script>
+	<script egret="game" src="bin-debug/modules/ajax/index.js"></script>
 	<script egret="game" src="bin-debug/modules/scene/interface.js"></script>
 	<script egret="game" src="bin-debug/modules/settings/index.js"></script>
 	<script egret="game" src="bin-debug/modules/swiper/Slide.js"></script>
