Picture Wall -> Elo Wall

--- a/detail.html
+++ b/detail.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Detail</title>
+  <title>Detail - Elo Wall</title>
   <style>
     * {
         box-sizing: border-box;
